@@ -65,10 +65,9 @@ Configuration
 -------------
 
 To configure the BigQuery connector, create a catalog properties file in
-``etc/catalog`` named, for example, ``bigquery.properties``, to mount the
-BigQuery connector as the ``bigquery`` catalog. Create the file with the
-following contents, replacing the connection properties as appropriate for
-your setup:
+``etc/catalog`` named ``example.properties``, to mount the BigQuery connector as
+the ``example`` catalog. Create the file with the following contents, replacing
+the connection properties as appropriate for your setup:
 
 .. code-block:: text
 
@@ -94,6 +93,19 @@ read (before filtering). This should roughly correspond to the maximum number
 of readers supported by the BigQuery Storage API. This can be configured
 explicitly with the ``bigquery.parallelism`` property. BigQuery may limit the
 number of partitions based on server constraints.
+
+Arrow serialization support
+^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+This is an experimental feature which introduces support for using Apache Arrow
+as the serialization format when reading from BigQuery.  Please note there are
+a few caveats:
+
+* Using Apache Arrow serialization is disabled by default. In order to enable
+  it, set the ``bigquery.experimental.arrow-serialization.enabled``
+  configuration property to ``true`` and add
+  ``--add-opens=java.base/java.nio=ALL-UNNAMED`` to the Trino
+  :ref:`jvm_config`.
 
 Reading from views
 ^^^^^^^^^^^^^^^^^^
@@ -133,12 +145,18 @@ Property                                              Description               
                                                       ``BIGNUMERIC`` and ``TIMESTAMP`` types are unsupported.        ``false``
 ``bigquery.views-cache-ttl``                          Duration for which the materialization of a view will be       ``15m``
                                                       cached and reused. Set to ``0ms`` to disable the cache.
+``bigquery.metadata.cache-ttl``                       Duration for which metadata retrieved from BigQuery            ``0ms``
+                                                      is cached and reused. Set to ``0ms`` to disable the cache.
 ``bigquery.max-read-rows-retries``                    The number of retries in case of retryable server issues       ``3``
 ``bigquery.credentials-key``                          The base64 encoded credentials key                             None. See the `requirements <#requirements>`_ section.
 ``bigquery.credentials-file``                         The path to the JSON credentials file                          None. See the `requirements <#requirements>`_ section.
 ``bigquery.case-insensitive-name-matching``           Match dataset and table names case-insensitively               ``false``
 ``bigquery.query-results-cache.enabled``              Enable `query results cache
                                                       <https://cloud.google.com/bigquery/docs/cached-results>`_      ``false``
+``bigquery.experimental.arrow-serialization.enabled`` Enable using Apache Arrow serialization when reading data      ``false``
+                                                      from BigQuery.
+                                                      Please read this `section <#arrow-serialization-support>`_
+                                                      before enabling this feature.
 ===================================================== ============================================================== ======================================================
 
 .. _bigquery-type-mapping:
@@ -253,9 +271,10 @@ No other types are supported.
 System tables
 -------------
 
-For each Trino table which maps to BigQuery view there exists a system table which exposes BigQuery view definition.
-Given a BigQuery view ``customer_view`` you can send query
-``SELECT * customer_view$view_definition`` to see the SQL which defines view in BigQuery.
+For each Trino table which maps to BigQuery view there exists a system table
+which exposes BigQuery view definition. Given a BigQuery view ``example_view``
+you can send query ``SELECT * example_view$view_definition`` to see the SQL
+which defines view in BigQuery.
 
 .. _bigquery_special_columns:
 
@@ -274,12 +293,12 @@ can be selected directly, or used in conditional statements. For example, you
 can inspect the partition date and time for each record::
 
     SELECT *, "$partition_date", "$partition_time"
-    FROM bigquery.web.page_views;
+    FROM example.web.page_views;
 
 Retrieve all records stored in the partition ``_PARTITIONDATE = '2022-04-07'``::
 
     SELECT *
-    FROM bigquery.web.page_views
+    FROM example.web.page_views
     WHERE "$partition_date" = date '2022-04-07';
 
 .. note::
@@ -323,13 +342,15 @@ processed by BigQuery. This can be useful for accessing native features which ar
 not available in Trino or for improving query performance in situations where
 running a query natively may be faster.
 
+.. include:: polymorphic-table-function-ordering.fragment
+
 For example, group and concatenate all employee IDs by manager ID::
 
     SELECT
       *
     FROM
       TABLE(
-        bigquery.system.query(
+        example.system.query(
           query => 'SELECT
             manager_id, STRING_AGG(employee_id)
           FROM
